# yt-clip-thread

./: .clip_patch  .gitignore  Dockerfile  Makefile  README.md  ci.yaml  clipper.py  pyproject.toml
.github/workflows/: ci.yml  run.yml
examples/: cleese.yaml  template.yaml
scripts/: ci-selftest.sh
