[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-clip-thread"
version = "0.1.0"
description = "CLI to slice YouTube videos into threadable clips"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0", "yt-dlp>=2024.1"]

[project.scripts]
ytclip = "clipper:main"
